master: removed AI generating instructions for the user

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,10 +1,11 @@
 TLS=1
+failover=2
+PI\ (agile)=2
 Apache\ Ant=2
 SO\ (role)=2
 UrbanCode\ Deploy\ (UCD)=2
 JFrog\ Artifactory=2
-PI\ (agile)=2
-failover=2
+to\ prompt\ (general\ meaning)=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -31,8 +32,8 @@ hub=3
 partition\ and\ sample=3
 exploratory\ testing=3
 data\ pseudonymization=3
-Logread=3
 landing\ page=3
+Logread=3
 value\ stream=3
 web\ portal=3
 data\ flow=3
@@ -77,13 +78,13 @@ hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
 diamond\ operator\ (Java)=3
-container\ management\ platform=3
 Swagger=3
+container\ management\ platform=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-worker\ node=3
 whitelisting=3
+worker\ node=3
 DPIA=3
 JETTY=3
 web\ container=3
@@ -133,8 +134,6 @@ object\ mapping\ (database)=3
 DORA=3
 arbitrary=3
 hash\ use\ cases=3
-to\ prompt=4
-asynchronous=4
 aspect\ oriented\ programming=4
 SA\ (technical\ user)=4
 uplink\ (networking)=4
@@ -169,8 +168,8 @@ Kerberos\ ticket=4
 JSON=4
 dispose\ of\ a\ list=4
 VPN=4
-deduce=4
 jar\ hell=4
+deduce=4
 good\ separation\ of\ concerns\ (DDD)=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
@@ -209,6 +208,7 @@ semantic\ registration\ message=4
 PI\ planning=4
 Data\ governance=4
 pseudonym=4
+PI\ (data)=4
 Bean\ factory/\ Application\ context=4
 cross\ architecture=4
 CTE\ (sandbox)=4
@@ -285,6 +285,7 @@ backlog=4
 GDPR=4
 legal\ person=4
 substitution\ (general\ word)=4
+asynchronous=4
 outdegree=4
 namespace\ (cluster)=4
 comply=4
@@ -295,8 +296,6 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
-PI\ (data)=4
-defensive\ programming=5
 URL\ safe\ format=5
 .war\ file=5
 full-text\ search=5
@@ -326,6 +325,7 @@ PVC\ (containerisation)=5
 pagination=5
 ORM=5
 proprietary=5
+defensive\ programming=5
 e.g.=5
 database\ transactions=5
 PV\ (containerisation)=5
