master: loading scores, explicit 0 score, adding score to ConceptDTO

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,5 +1,7 @@
+TLS=-1
 JETTY=2
 DORA=2
+PATH\ environment\ variable=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -286,7 +288,6 @@ Agile\ Test\ Quadrants=4
 Chromium=4
 AES\ (context\:\ Smart-ID)=4
 Kubernetes=4
-diamond\ operator\ (Java)=5
 URL\ safe\ format=5
 .war\ file=5
 full-text\ search=5
@@ -309,6 +310,7 @@ PR=5
 metadata=5
 directed\ graph=5
 Argo\ CD=5
+diamond\ operator\ (Java)=5
 servlet/controller/MVC=5
 good\ cohesion\ for\ DocManager=5
 Kerberos=5
