--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,5 @@
 problems:
+  - continue working on having score mainly on ConceptDTO not on key_score and all score actions should update ConceptDTO now.
   - use explicit score of 0
   - put ConceptDTO to use:
       - "public final Map<String, String> keyDefinition = new HashMap<>();" should be Map<String, ConceptDTO>
