--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,7 +1,8 @@
-TLS=-1
+TLS=1
+PATH\ environment\ variable=2
 JETTY=2
 DORA=2
-PATH\ environment\ variable=2
+raise\ (Python)=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -68,13 +69,13 @@ NFS\ (storage)=3
 hyphen\ ("-")\ function=3
 ICT\ system=3
 Hungarian\ pollution=3
-Swagger=3
 container\ management\ platform=3
+Swagger=3
 error\ budget=3
 cloud\ platform=3
 RBAC=3
-whitelisting=3
 worker\ node=3
+whitelisting=3
 DPIA=3
 web\ container=3
 indegree=3
@@ -153,11 +154,12 @@ Kerberos\ ticket=4
 JSON=4
 dispose\ of\ a\ list=4
 VPN=4
-jar\ hell=4
 deduce=4
+jar\ hell=4
+try-except\ (Python)=4
 good\ separation\ of\ concerns\ (DDD)=4
-present()\ (Fluentlenium)=4
 accessibility\ testing=4
+present()\ (Fluentlenium)=4
 abstract\ class=4
 SLI=4
 non-semantic\ message=4
