master: refactoring, learning, notes

--- a/src/main/java/org/sa/storage/score.properties
+++ b/src/main/java/org/sa/storage/score.properties
@@ -1,8 +1,10 @@
 TLS=1
+pip=1
+tuple\ (Python)=1
 PATH\ environment\ variable=2
 JETTY=2
-DORA=2
 raise\ (Python)=2
+DORA=2
 vague=3
 servlet=3
 CI\ (IT\ component)=3
@@ -243,6 +245,7 @@ OpenShift=4
 polymorphism\ (OOP)=4
 volatile=4
 npm=4
+package\ manager\ examples\ by\ programming\ language=4
 git\ stash=4
 container=4
 encapsulation=4
