master: removed unused menu items

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,5 @@
 problems:
+  - define all and define all all should be a single menu and method
   - should key_concept map be ascending by concept.score?
   - String[] mainPartsOfConceptToDescribeItCorrectly should be part of ConceptDTO. better name needed.
   - continue working on having score mainly on ConceptDTO not on key_score and all score actions should update ConceptDTO now.
