--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,6 @@
 problems:
+  - load scores in A_ConceptsLoader
+  - concept should have record InstructionPair(evaluateInstruction, answerInstruction)
   - define all and define all all should be a single menu and method
   - should key_concept map be ascending by concept.score?
   - String[] mainPartsOfConceptToDescribeItCorrectly should be part of ConceptDTO. better name needed.
