--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -17,6 +17,7 @@ JSP=4
 trie=3
 JSX=4
 domain=5
+authorized\ signatory=0
 JPA\ (db)=4
 URL\ safe\ format=5
 .war\ file=5
@@ -24,10 +25,12 @@ full-text\ search=5
 master\ node=4
 customer\ data\ domain=3
 PPTE=4
+teleagreement\ user=0
 downlink\ (networking)=4
 RESTful\ data\ formats=5
 aspect=5
 penetration\ testing=4
+channels\ (bank)=0
 WoW=4
 separation\ of\ concerns\ (DDD)=5
 mitigate=4
@@ -65,6 +68,7 @@ F5=3
 VIP\ (OpenShift)=6
 failover=4
 port=5
+managed\ cloud\ service=0
 entity\ (database)=4
 XSS=3
 component\ scanning=3
@@ -111,6 +115,7 @@ build\ process=6
 value\ stream=4
 thoroughness=4
 web\ portal=3
+docker\ desktop=0
 edge\ (graphs)=4
 stop\ word\ filtering=4
 data\ flow=5
@@ -127,6 +132,7 @@ JPA\ entity\ management\ (db)=3
 PATH\ environment\ variable=4
 PCI\ DSS=4
 semantic\ message=7
+AKS=0
 bounded\ context\ (example\ of\ inventory\ management)=6
 abstraction\ examples=4
 commissioning=4
@@ -221,6 +227,7 @@ synchronous=4
 stakeholder=4
 Apache\ Ivy=4
 F5\ rules=3
+emergency\ release=0
 directed\ graph=5
 pivot=3
 sticky\ session\ benefit=4
@@ -228,6 +235,7 @@ bad\ separation\ of\ concerns\ (DDD)=3
 Playwright=4
 NFS\ (storage)=3
 RESTful\ layers=7
+headlamp=0
 Argo\ CD=5
 jitter=4
 hyphen\ ("-")\ function=5
@@ -295,6 +303,7 @@ JDBC=5
 Liferay=6
 polymorphism\ (OOP)=4
 compatibility\ testing=2
+instant\ payment=0
 npm=4
 volatile=4
 package\ manager\ examples\ by\ programming\ language=4
@@ -316,6 +325,7 @@ deque=4
 credential=4
 Kafka\ vs\ Kubernetes=6
 undirected\ graph=6
+filebeat=0
 database\ transactions=5
 servlet\ container=3
 PV\ (containerisation)=5
@@ -342,12 +352,13 @@ domain\ vs\ bounded\ context=4
 JFrog\ Artifactory=4
 ECB=3
 A/B\ testing=4
+monitoring\ (app)=0
 token=5
 RESTful\ methods\ (mention\ all\ 4)=4
 DAO=4
 assess=4
 DevSecOps=4
-firewall=3
+firewall=5
 API\ gateway=5
 fetch=4
 chaos\ engineering=6
