master: concepts class

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,5 @@
 problems:
+  - do something with INSTRUCTIONS_FOR_USER
   - to wiki print time.now()
   - use file util where possible
   - make app : printTopics (separate from wiki exporter)
