master: do changes and removals of concepts

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -30,7 +30,7 @@ downlink\ (networking)=4
 RESTful\ data\ formats=5
 aspect=5
 penetration\ testing=4
-channels\ (bank)=1
+channels\ (bank)=3
 WoW=4
 separation\ of\ concerns\ (DDD)=5
 mitigate=4
@@ -113,9 +113,9 @@ allocate\ a\ list=6
 custody=4
 build\ process=6
 value\ stream=4
+Headlamp\ (app)=2
 thoroughness=4
 web\ portal=3
-docker\ desktop=2
 edge\ (graphs)=4
 stop\ word\ filtering=4
 data\ flow=5
@@ -126,6 +126,7 @@ roll\ out=5
 exponent\ (math)=5
 URL=4
 RDBMS=4
+Docker\ desktop=2
 product\ backlog\ (agile)=4
 Rancher\ platform=6
 JPA\ entity\ management\ (db)=3
@@ -235,7 +236,6 @@ bad\ separation\ of\ concerns\ (DDD)=3
 Playwright=4
 NFS\ (storage)=3
 RESTful\ layers=7
-headlamp=1
 Argo\ CD=5
 jitter=4
 hyphen\ ("-")\ function=5
@@ -352,7 +352,7 @@ domain\ vs\ bounded\ context=4
 JFrog\ Artifactory=4
 ECB=3
 A/B\ testing=4
-monitoring\ (app)=1
+monitoring\ (app)=3
 token=5
 RESTful\ methods\ (mention\ all\ 4)=4
 DAO=4
