master: updated concepts

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -6,6 +6,7 @@ ternary\ operator=4
 CI\ (IT\ component)=4
 heap\ (context\:\ data\ structure)=3
 container\ image=6
+AML\ (compliance)=2
 diligence=7
 dispose\ of\ memory=7
 AWS\ (cloud)=3
@@ -15,6 +16,7 @@ domain\ model=3
 AD=4
 JSP=4
 trie=3
+PCI-DSS\ (compliance)=1
 JSX=4
 domain=5
 authorized\ signatory=2
@@ -102,6 +104,7 @@ exploratory\ testing=3
 non-semantic\ message=4
 PI\ (agile)=4
 SLO=4
+SLA\ (commitment)=1
 data\ pseudonymization=5
 Apache\ Ant=6
 dispatcher=4
@@ -161,6 +164,7 @@ observability=3
 volatile\ (Java)=3
 Azure=4
 Hibernate=4
+CIF\ (importance)=1
 DSS=4
 Ingress\ Controller=3
 web\ server=5
@@ -224,6 +228,7 @@ PR=5
 metadata=5
 base\ (math)=4
 due\ diligence=4
+RPO\ (requirement)=0
 synchronous=4
 stakeholder=4
 Apache\ Ivy=4
@@ -257,6 +262,7 @@ staging\ environment=4
 bandwidth=4
 servlet/controller/MVC=5
 error\ budget=3
+silo=0
 cloud\ platform=3
 good\ cohesion\ for\ DocManager=5
 RBAC=3
@@ -302,7 +308,6 @@ defensive\ programming=5
 JDBC=5
 Liferay=6
 polymorphism\ (OOP)=4
-compatibility\ testing=2
 instant\ payment=2
 npm=4
 volatile=4
