master: added ui instruction to concept file

--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,7 +1,6 @@
 problems:
-  - add default instructions to separate concept file:
-      - user answer instruction
-      - ai evaluation instruction
+
+  - when loading concept from file, check if key matches file, and topic matches directory, else throw.
   - do something with INSTRUCTIONS_FOR_USER
   - to wiki print time.now()
   - use file util where possible
