--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,5 +1,5 @@
 problems:
-
+  - check if loaded concept matches the one in the separate file.
   - when loading concept from file, check if key matches file, and topic matches directory, else throw.
   - do something with INSTRUCTIONS_FOR_USER
   - to wiki print time.now()
