--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,5 +1,5 @@
 problems:
-  - clean up words and swed topics
+  - clean swed topics
   - use file util where possible
   - make app : printTopics (separate from wiki exporter)
   - TopicsPrinterApp update when topics will be folder names rather than filenames
