--- a/src/main/java/org/sa/notes.yaml
+++ b/src/main/java/org/sa/notes.yaml
@@ -1,4 +1,5 @@
 problems:
+  - test API concept
   - write non-default user and ai instruction for each concept.
 ideas:
   - improve instructions and succeed to get 10 from these concepts:
