master: improved resful methods concept

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -63,7 +63,7 @@ stub=5
 greedy\ solution=8
 intrusive=4
 JWT=4
-CIM=0
+CIM=4
 package\ (software)=4
 lazy-loading\ (Playwright)=4
 Google\ Cloud=5
@@ -191,6 +191,7 @@ JPQL=3
 performance\ testing=5
 to\ prompt\ (general\ meaning)=4
 paradigm=4
+RESTful\ methods=4
 semantic\ registration\ message=4
 PI\ planning=4
 latency=3
@@ -366,7 +367,6 @@ JFrog\ Artifactory=4
 ECB=3
 monitoring\ (app)=3
 token=5
-RESTful\ methods\ (mention\ all\ 4)=4
 hyphen\ (-)\ function=2
 DAO=4
 assess=4
