master: concept guidelines improved

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -302,6 +302,7 @@ enhanced=6
 Kerberos\ principal=3
 lazy\ initialization=6
 firewall\ opening=4
+types\ of\ software\ components=0
 feature\ flag=5
 DC\ components\ (infrastructure)=4
 pagination=5
