master: improvements on concepts regarding cloud

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -210,7 +210,7 @@ ECB\ stress\ test=3
 product\ life\ cycle\ management=4
 Hazelcast=4
 abstraction=4
-NIC=0
+NIC=4
 SSH=4
 collision\ resistant=4
 SSL=4
@@ -277,6 +277,7 @@ RBAC=3
 worker\ node=3
 whitelisting=5
 pipeline\ (IT)=7
+service\ vs\ managed\ service=4
 gateway\ team=4
 proxy\ pattern=6
 cohesion\ (DDD)=4
@@ -341,7 +342,6 @@ undirected\ graph=6
 filebeat=3
 database\ transactions=5
 servlet\ container=3
-OLM\ (observability)=0
 PV\ (containerisation)=5
 Logstash=10
 obfuscate\ data=4
