--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -56,7 +56,7 @@ ELK=3
 bounded\ context\ (example\ of\ order\ processing)=4
 container\ instance=3
 sticky\ session=4
-tuple\ (Python)=4
+tuple\ (Python)=9
 DDoS\ attacks=4
 AFC\ (compliance)=4
 stub=5
@@ -74,6 +74,7 @@ port=5
 managed\ cloud\ service=4
 entity\ (database)=4
 XSS=3
+contiguous=0
 party=0
 component\ scanning=3
 coupling\ (noun)\ (software)=3
@@ -277,7 +278,6 @@ RBAC=3
 worker\ node=3
 whitelisting=5
 pipeline\ (IT)=7
-service\ vs\ managed\ service=4
 gateway\ team=4
 proxy\ pattern=6
 cohesion\ (DDD)=4
@@ -292,6 +292,7 @@ Kerberos=5
 bean\ factory\ -\ application\ context=2
 indegree=3
 bad\ cohesion\ (DDD)=3
+upkeep=0
 REST\ client-server\ constraint=4
 PVC\ (containerisation)=5
 good\ cohesion\ (DDD)=5
@@ -326,6 +327,7 @@ package\ manager\ examples\ by\ programming\ language=4
 GCT=4
 git\ stash=4
 gateway=5
+managed\ service=0
 container=4
 commissioning\ example\ sentence=4
 encapsulation=4
