master: improved concept ArgoCD

--- a/src/main/java/org/sa/storage/saves/score.properties
+++ b/src/main/java/org/sa/storage/saves/score.properties
@@ -152,6 +152,7 @@ verbose=6
 PII=5
 framework=3
 pointcut=4
+iKiosk=0
 etcd=3
 Unix=7
 Java\ EE=4
@@ -162,6 +163,7 @@ unit\ testing=3
 DRY=3
 NFC=4
 to\ stash=4
+PI\ planning\ activities=0
 cohesion\ example=6
 pip=5
 credibility=4
@@ -194,7 +196,6 @@ to\ prompt\ (general\ meaning)=4
 paradigm=4
 RESTful\ methods=4
 semantic\ registration\ message=4
-PI\ planning=4
 latency=3
 Data\ governance=4
 pseudonym=4
@@ -248,7 +249,7 @@ Playwright=4
 NFS\ (storage)=3
 connection\ pool\ (database)=2
 RESTful\ layers=7
-Argo\ CD=5
+Argo\ CD=7
 jitter=4
 ICT\ system=3
 Hungarian\ pollution=3
@@ -262,6 +263,7 @@ remediation=4
 endpoint=4
 credential\ examples=4
 UrbanCode\ Deploy\ (UCD)=4
+portfolio\ management\ team=0
 Swagger=3
 container\ management\ platform=3
 party\ master\ data=0
@@ -281,6 +283,7 @@ pipeline\ (IT)=7
 gateway\ team=4
 proxy\ pattern=6
 cohesion\ (DDD)=4
+vertex=0
 DPIA=3
 technical\ debt=4
 JETTY=4
